// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders without any error 1`] = `
<div
  data-id="retabbed-0"
  data-testid="tabWrapper"
>
  <div
    role="tablist"
  >
    <div
      aria-controls="retabbed-0-tab-0"
      aria-disabled="false"
      aria-selected="true"
      data-testid="tab-0"
      id="retabbed-0-tab-0"
      role="tab"
      tabindex="0"
    >
      1
    </div>
    <div
      aria-controls="retabbed-0-tab-1"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-1"
      id="retabbed-0-tab-1"
      role="tab"
      tabindex="-1"
    >
      2
    </div>
    <div
      aria-controls="retabbed-0-tab-2"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-2"
      id="retabbed-0-tab-2"
      role="tab"
      tabindex="-1"
    >
      3
    </div>
    <div
      aria-controls="retabbed-0-tab-3"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-3"
      id="retabbed-0-tab-3"
      role="tab"
      tabindex="-1"
    >
      4
    </div>
    <div
      aria-controls="retabbed-0-tab-4"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-4"
      id="retabbed-0-tab-4"
      role="tab"
      tabindex="-1"
    >
      5
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="retabbed-0-tab-0"
    data-testid="tabPanel-0"
    id="retabbed-0-tabpanel-0"
    role="tabpanel"
  >
    1
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-0-tab-1"
    data-testid="tabPanel-1"
    id="retabbed-0-tabpanel-1"
    role="tabpanel"
  />
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-0-tab-2"
    data-testid="tabPanel-2"
    id="retabbed-0-tabpanel-2"
    role="tabpanel"
  />
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-0-tab-3"
    data-testid="tabPanel-3"
    id="retabbed-0-tabpanel-3"
    role="tabpanel"
  />
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-0-tab-4"
    data-testid="tabPanel-4"
    id="retabbed-0-tabpanel-4"
    role="tabpanel"
  />
</div>
`;

exports[`Tabs throws error when changing from uncontrolled to controlled 1`] = `
"Switching between controlled mode (by using \`selectedIndex\`) and uncontrolled mode is not supported in \`Tabs\`.
For more information about controlled and uncontrolled mode of react-tabs see the README."
`;

exports[`Tabs works without assigning index 1`] = `
<div
  data-id="retabbed-2"
  data-testid="tabWrapper"
>
  <div
    role="tablist"
  >
    <div
      aria-controls="retabbed-2-tab-0"
      aria-disabled="false"
      aria-selected="true"
      data-testid="tab-0"
      id="retabbed-2-tab-0"
      role="tab"
      tabindex="0"
    >
      1
    </div>
    <div
      aria-controls="retabbed-2-tab-1"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-1"
      id="retabbed-2-tab-1"
      role="tab"
      tabindex="-1"
    >
      2
    </div>
    <div
      aria-controls="retabbed-2-tab-2"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-2"
      id="retabbed-2-tab-2"
      role="tab"
      tabindex="-1"
    >
      3
    </div>
    <div
      aria-controls="retabbed-2-tab-3"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-3"
      id="retabbed-2-tab-3"
      role="tab"
      tabindex="-1"
    >
      4
    </div>
    <div
      aria-controls="retabbed-2-tab-4"
      aria-disabled="false"
      aria-selected="false"
      data-testid="tab-4"
      id="retabbed-2-tab-4"
      role="tab"
      tabindex="-1"
    >
      5
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="retabbed-2-tab-0"
    data-testid="tabPanel-0"
    id="retabbed-2-tabpanel-0"
    role="tabpanel"
  >
    1
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-2-tab-1"
    data-testid="tabPanel-1"
    id="retabbed-2-tabpanel-1"
    role="tabpanel"
  />
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-2-tab-2"
    data-testid="tabPanel-2"
    id="retabbed-2-tabpanel-2"
    role="tabpanel"
  />
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-2-tab-3"
    data-testid="tabPanel-3"
    id="retabbed-2-tabpanel-3"
    role="tabpanel"
  />
  <div
    aria-hidden="true"
    aria-labelledby="retabbed-2-tab-4"
    data-testid="tabPanel-4"
    id="retabbed-2-tabpanel-4"
    role="tabpanel"
  />
</div>
`;
